--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,26 +3,26 @@ version: 0.2
 env:
   variables:
     AWS_DEFAULT_REGION: ap-southeast-2
-    AWS_ACCOUNT_ID: "058188477434"
-    IMAGE_REPO_NAME: "kds-api"
-    IMAGE_TAG: "$CODEBUILD_RESOLVED_SOURCE_VERSION"
+    AWS_ACCOUNT_ID: 058188477434
+    IMAGE_REPO_NAME: kds-api
+    IMAGE_TAG: latest
 
 phases:
   pre_build:
     commands:
-      - echo "Logging in to Amazon ECR..."
+      - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
-      - echo "Build started on $(date)"
+      - echo Build started on `date`
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
     commands:
-      - echo "Pushing image..."
+      - echo Pushing image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
-      - echo "Generating imagedefinitions.json"
-      - printf '[{"name":"kds-api","imageUri":"%s"}]\n' "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG" > imagedefinitions.json
+      - echo Generating imagedefinitions.json
+      - printf '[{"name":"kds-api","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
 
 artifacts:
   files:
