--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,3 @@
----
 version: 0.2
 
 env:
@@ -7,7 +6,6 @@ env:
     AWS_ACCOUNT_ID: "058188477434"
     IMAGE_REPO_NAME: "kds-api"
     IMAGE_TAG: "latest"
-    APP_DIR: KDS-API   # optional hint; script will fall back to root
 
 phases:
   pre_build:
@@ -17,39 +15,25 @@ phases:
       - ECR_REGISTRY="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"
       - REPO_URI="$ECR_REGISTRY/$IMAGE_REPO_NAME"
       - aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS --password-stdin "$ECR_REGISTRY"
-      - echo "Ensuring ECR repo exists (ok if it already exists)..."
+      - echo "Ensuring ECR repo exists..."
       - aws ecr describe-repositories --repository-names "$IMAGE_REPO_NAME" || aws ecr create-repository --repository-name "$IMAGE_REPO_NAME"
 
   build:
     commands:
       - echo "Build started on $(date)"
-      - echo "CODEBUILD_SRC_DIR=$CODEBUILD_SRC_DIR"
-      - echo "== ls -la at repo root ==" && ls -la
-      - echo "== tree (depth 3) ==" && find . -maxdepth 3 -print | sed 's#^\./##' | sort
-      - |
-          set -e
-          # Prefer APP_DIR/Dockerfile, else root Dockerfile, else search
-          if [ -d "$APP_DIR" ] && [ -f "$APP_DIR/Dockerfile" ]; then
-            DF="$APP_DIR/Dockerfile"; CTX="$APP_DIR"
-          elif [ -f "Dockerfile" ]; then
-            DF="Dockerfile"; CTX="."
-          else
-            DF="$(find . -maxdepth 4 -type f -iname 'dockerfile' -print -quit)"
-            [ -n "$DF" ] || { echo "ERROR: No Dockerfile found."; exit 1; }
-            CTX="$(dirname "$DF")"
-          fi
-          echo "Using Dockerfile: $DF"
-          echo "Build context:   $CTX"
-          docker build -f "$DF" -t "$IMAGE_REPO_NAME:$IMAGE_TAG" "$CTX"
+      - echo "Current directory contents:"
+      - ls -la
+      - echo "Building Docker image..."
+      - docker build -t "$IMAGE_REPO_NAME:$IMAGE_TAG" .
       - docker tag "$IMAGE_REPO_NAME:$IMAGE_TAG" "$REPO_URI:$IMAGE_TAG"
 
   post_build:
     commands:
-      - echo "Pushing image..."
+      - echo "Pushing image to ECR..."
       - docker push "$REPO_URI:$IMAGE_TAG"
-      - echo "Generating imagedefinitions.json"
+      - echo "Creating imagedefinitions.json..."
       - printf '[{"name":"kds-api","imageUri":"%s"}]\n' "$REPO_URI:$IMAGE_TAG" > imagedefinitions.json
-      - echo "== imagedefinitions.json ==" && cat imagedefinitions.json
+      - cat imagedefinitions.json
 
 artifacts:
   files:
